# wool-price-comparison

./: README.md  main.py  pyproject.toml
notebooks/: samples.ipynb
notebooks/output/: wool_data.csv
output/: wool_data_03-Sep-2022_21-17-27.csv
src/: utils.py  wool_data_fetcher.py
tests/: test_utils.py  test_wool_data_fetcher.py
