[tool.poetry]
name = "wool-price-comparison"
version = "0.1.0"
description = ""
authors = ["akbar <a.khidirov@searchmetrics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
jupyter = "^1.0.0"
requests = "^2.28.1"
black = "^22.8.0"
pandas = "^1.4.4"
freezegun = "^1.2.2"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
